--- a/src/EmployeeManagement.API/Properties/launchSettings.json
+++ b/src/EmployeeManagement.API/Properties/launchSettings.json
@@ -16,7 +16,7 @@
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:5172",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development"        
       }
     },
     "https": {
@@ -26,7 +26,9 @@
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7056;http://localhost:5172",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "DEFAULT_CONNECTION": "Server=127.0.0.1; Database=EmployeeManagement; user id=sa; password=dev;Trusted_Connection=True; MultipleActiveResultSets=true;TrustServerCertificate=True;",
+        "DEFAULT_CONNECTION_PROD": "Server=tcp:udemytesting.database.windows.net,1433;Initial Catalog=EmployeeManagement;Persist Security Info=False;User ID=ariftan;Password=P@ssw0rd1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
       }
     },
     "IIS Express": {
